# MCMC-Group

./: .gitignore  CITATION.cff  LICENSE  README.md  background_table.csv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: run_base.yaml  staged_demo.yaml
data/bao/: .gitkeep
data/cmb/: .gitkeep
data/demo/: bao.csv  hz.csv  sne.csv
data/hz/: .gitkeep
data/real/: README.md
data/sne/: .gitkeep
docs/: index.md
docs/implementation/: datasets.md  map_equations_to_code.md  model_backends.md  real_datasets_workflow.md
docs/theory/: MCMC_ECUACIONES_BASE.txt  block_0.md  block_1.md  block_1_core.md  block_2.md  block_2_effective.md  ontology.md  overview.md
docs/tutorials/: quickstart_fit_emcee.md
reports/: ONTOLOGY_CORRECTION_REPORT.md  generate_ontology_plots.py
results/: .gitkeep
scripts/: generate_all_block_figures.py  plot_run.py  run_background_table.py  run_distance_demo.py  run_fit_emcee.py  run_nbody_cronos_toy.py  run_pregeom_export.py  simulate_auxiliary.py  simulate_block3.py  simulate_block4.py  simulate_block5.py  validate_datasets.py
scripts/wrappers/: run_pipeline.py
src/mcmc/: __init__.py  cli.py
src/mcmc/auxiliary/: __init__.py  baryogenesis.py
src/mcmc/blocks/: __init__.py
src/mcmc/blocks/block0/: __init__.py  export_initial_conditions.py  pregeometric_field.py  primordial_collapse.py  primordial_state.py
src/mcmc/blocks/block1/: __init__.py  core_mapping.py  cronos.py
src/mcmc/blocks/block2/: __init__.py  hubble.py  mp_ep.py
src/mcmc/blocks/block3/: __init__.py  config.py  cronos_integrator.py  poisson_modified.py  timestep_cronos.py
src/mcmc/blocks/block4/: __init__.py  config.py  correlators.py  mass_gap.py  monte_carlo.py  s_scan.py  (+1 more)
src/mcmc/channels/: __init__.py  eos.py  lambda_rel.py  q_dual.py  rho_id_ontological.py  rho_id_parametric.py  rho_id_refined.py  rho_lat.py  rho_lat_parametric.py
src/mcmc/config/: defaults.yaml  priors.yaml
src/mcmc/core/: __init__.py  background.py  checks.py  chronos.py  cronos.py  cronoshapes.py  friedmann.py  friedmann_effective.py  hz_from_background.py  mapping.py  ontology.py  s_grid.py  solve_postbb.py  solve_prebb.py
src/mcmc/data/: __init__.py  io.py  registry.py
src/mcmc/growth/: __init__.py  f_sigma8.py  linear_growth.py  mu_eta.py
src/mcmc/inference/: __init__.py  emcee_fit.py  postprocess.py
src/mcmc/lattice/: __init__.py  beta_of_S.py  mass_gap.py  monte_carlo.py  wilson.py
src/mcmc/models/: __init__.py  block1_model.py  builder.py  effective_model.py
src/mcmc/nbody/: __init__.py  crono_step.py  halo_finder.py  halo_mass_function.py  integrator_S.py  kdk.py  poisson.py  profiles.py  rotation_curves.py
src/mcmc/observables/: __init__.py  bao.py  bao_distances.py  distances.py  hz.py  info_criteria.py  likelihoods.py  sne.py
src/mcmc/ontology/: __init__.py  adrian_field.py  dual_metric.py  s_map.py
src/mcmc/pipeline/: __init__.py  config.py  inference.py  run.py  staged.py
src/mcmc/pregeom/: __init__.py  s0_state.py
tests/: test_auxiliary.py  test_background.py  test_background_monotonicity.py  test_block1_hz_adapter.py  test_block2_bao_sne_smoke.py  test_block2_effective_hnorm.py  test_block3.py  test_block4.py  test_block5.py  test_channels_new.py  test_covariance_chi2.py  test_cronos.py  test_cronoshapes.py  test_data_io_demo.py  test_friedmann.py  test_growth.py  test_imports.py  test_lattice.py  test_likelihood_smoke.py  test_model_builder.py  test_nbody.py  test_nbody_profiles.py  test_observables_regression.py  test_observables_smoke.py  test_ontology.py  test_pr06_pipeline.py  test_pr07_pipeline_smoke.py  test_pr_fix_02_chronos_mapping.py  test_pr_fix_03_solvers.py  test_pr_fix_04_staged_pipeline.py  test_pr_fix_05_likelihood_postbb.py  test_pregeom.py  test_rho_id_transition.py  test_rho_lat_channel.py  test_s_grid.py
(+16 files in other folders)
