[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcmc"
version = "0.1.0"
description = "Modelo Cosmologico de Multiples Colapsos (MCMC) - motor de fondo, observables y ajuste MCMC"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Modelo-cosmologico-MCMC"}]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "pyyaml>=6.0",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "emcee>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5",
]

[project.scripts]
mcmc = "mcmc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
